<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@drawable/homewall">

    <TextView
        android:id="@+id/textView"
        android:layout_width="306dp"
        android:layout_height="47dp"
        android:text="@string/app_name"
        android:textColor="#424040"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <ImageButton
        android:id="@+id/btnNat"
        android:layout_width="346dp"
        android:layout_height="174dp"
        android:contentDescription="@string/imgdesc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.047"
        app:srcCompat="@drawable/naturebtn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nature_wonders"
        android:textColor="#FFFBFB"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnNat"
        app:layout_constraintEnd_toEndOf="@+id/btnNat"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/btnNat"
        app:layout_constraintTop_toTopOf="@+id/btnNat"
        app:layout_constraintVertical_bias="0.878"
        android:clickable="false"/>

    <ImageButton
        android:id="@+id/btnHis"
        android:layout_width="346dp"
        android:layout_height="174dp"
        android:contentDescription="@string/imgdesc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.114"
        app:srcCompat="@drawable/histrbtn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/history_wonders"
        android:textColor="#FFFBFB"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnHis"
        app:layout_constraintEnd_toEndOf="@+id/btnHis"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/btnHis"
        app:layout_constraintTop_toTopOf="@+id/btnHis"
        app:layout_constraintVertical_bias="0.88" />

    <ImageButton
        android:id="@+id/btnBch"
        android:layout_width="346dp"
        android:layout_height="174dp"
        android:contentDescription="@string/imgdesc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHis"
        app:layout_constraintVertical_bias="0.159"
        app:srcCompat="@drawable/bechbtn" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:shadowColor="#050505"
        android:text="@string/sl_beach"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnBch"
        app:layout_constraintEnd_toEndOf="@+id/btnBch"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/btnBch"
        app:layout_constraintTop_toTopOf="@+id/btnBch"
        app:layout_constraintVertical_bias="0.88" />

    <ImageButton
        android:id="@+id/btnAbt"
        android:layout_width="116dp"
        android:layout_height="106dp"
        android:clickable="true"
        android:contentDescription="@string/imgdesc"
        android:focusable="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBch"
        app:layout_constraintVertical_bias="0.904"
        app:srcCompat="@drawable/icon2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="8dp"
        android:text="About US"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnAbt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBch"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>